# solplan-rust

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  solplan.html
.github/workflows/: build.yml
conf/: default.conf
pkg/: package.json  solplan.d.ts  solplan.js  solplan_bg.wasm  solplan_bg.wasm.d.ts
src/: lib.rs  main.rs
src/algorithm/: algorithm.rs  mod.rs  rasterized.rs  staggered.rs
src/format/: currencyformatter.rs  mod.rs  siformatter.rs
src/lens/: mod.rs  planlens.rs  planresultlens.rs  roofboundarytuplelens.rs
src/model/: boundary.rs  clearance.rs  constraints.rs  layout.rs  mod.rs  orientation.rs  panel.rs  plan.rs  roof.rs  state.rs
src/util/: configuration.rs
src/view/: clearanceshape.rs  mod.rs  panelshape.rs  roofshape.rs
src/widget/: boundarywidget.rs  clearancewidget.rs  common.rs  constraintswidget.rs  mod.rs  panelwidget.rs  planwidget.rs  roofwidget.rs
