[package]
name = "solplan"
version = "0.1.0"
authors = ["Ryan Meulenkamp <Ryan.Meulenkamp@Nedap.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", branch = "value-formatter", features = ["im", "image"] }
wasm-bindgen = "0.2.69"
console_error_panic_hook = "0.1.6"
log = "0.4.11"
instant = { version = "0.1.6", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
simple_logger = { version = "1.9.0", default-features = false }

